--- a/src/front-end-2/app/views/login.html
+++ b/src/front-end-2/app/views/login.html
@@ -6,7 +6,7 @@
 			<form role=form ng-submit=submit()> 
 				<div class=form-content> 
 					<div class=form-group> 
-						<input type=text class="form-control input-underline input-lg" placeholder=Padrón> 
+						<input type=text ng-model="padron" class="form-control input-underline input-lg" placeholder=Padrón> 
 					</div> 
 					<div class=form-group> 
 						<input type=password class="form-control input-underline input-lg" placeholder=Contraseña> 
