--- a/src/front-end-2/app/views/login.html
+++ b/src/front-end-2/app/views/login.html
@@ -1,19 +1,19 @@
- <div class=login-page> 
-	<div class=row> 
-		<div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4"> 
+ <div class=login-page>
+	<div class=row>
+		<div class="col-md-4 col-lg-4 col-md-offset-4 col-lg-offset-4">
 			<img src=images/fiubalogo.png class=user-avatar>
-			<h1><small>Sistema de inscripciones</small></h1> 
-			<form role=form ng-submit=submit()> 
-				<div class=form-content> 
-					<div class=form-group> 
-						<input type=text ng-model="padron" class="form-control input-underline input-lg" placeholder=Padrón> 
-					</div> 
-					<div class=form-group> 
-						<input type=password class="form-control input-underline input-lg" placeholder=Contraseña> 
-					</div> 
-				</div> 
-				<button type=submit class="btn btn-white btn-outline btn-lg btn-rounded">Ingresar</button> 
-			</form> 
-		</div> 
-	</div> 
+			<h1><small>Sistema de inscripciones</small></h1>
+			<form role=form ng-submit=submit()>
+				<div class=form-content>
+					<div class=form-group>
+						<input type=text ng-model="record" class="form-control input-underline input-lg" placeholder=Padrón>
+					</div>
+					<div class=form-group>
+						<input type=password class="form-control input-underline input-lg" placeholder=Contraseña>
+					</div>
+				</div>
+				<button type=submit class="btn btn-white btn-outline btn-lg btn-rounded">Ingresar</button>
+			</form>
+		</div>
+	</div>
 </div>
